Bug: Fix 1196 Integrations page is broken on safari

--- a/app/javascript/dashboard/assets/scss/views/settings/integrations.scss
+++ b/app/javascript/dashboard/assets/scss/views/settings/integrations.scss
@@ -8,6 +8,7 @@
 
     .integration--image {
       display: flex;
+      height: 10rem;
       margin-right: $space-normal;
       width: 10rem;
 
